Fix overflow for vertical timeline

--- a/src/components/VerticalTimeline/VerticalTimeline.css
+++ b/src/components/VerticalTimeline/VerticalTimeline.css
@@ -1,4 +1,5 @@
 .VerticalTimeline {
   margin: 0 auto !important;
   max-width: 1250px;
+  overflow: hidden;
 }
